# recat

./: Cargo.toml
crates/recat-adapter/: Cargo.toml
crates/recat-adapter-persist/: Cargo.toml
crates/recat-adapter-persist/migrations/2023-06-16-212926_create_products/: up.sql
crates/recat-adapter-persist/src/: config.rs  error.rs  lib.rs  pool.rs  schema.rs
crates/recat-adapter-persist/src/models/: mod.rs  product.rs
crates/recat-adapter-persist/src/repos/: macros.rs  mod.rs  products.rs
crates/recat-app/: Cargo.toml
crates/recat-app/src/: lib.rs
crates/recat-app/src/state/: config.rs  data.rs  mod.rs
crates/recat-app/src/usecases/: mod.rs
crates/recat-app/src/usecases/products/: add.rs  get.rs  get_page.rs  mod.rs  remove.rs  update.rs
crates/recat-app/src/util/: error.rs
crates/recat-core/: Cargo.toml
crates/recat-core/src/: error.rs
crates/recat-core/src/entities/: mod.rs  principle.rs  product.rs  token.rs
crates/recat-core/src/repos/: mod.rs  products.rs
crates/recat-core/src/usecases/products/: add.rs  get.rs  get_page.rs  mod.rs  remove.rs  update.rs
crates/recat-driver/: Cargo.toml
crates/recat-driver/src/: main.rs
crates/recat-driver/src/config/: data.rs  mod.rs  parse.rs
crates/recat-driver/src/state/: data_context.rs  mod.rs  usecases.rs
