[package]
name = "recat-adapter-persist"
description = "recat adapter layer (persistence)"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
diesel = { version = "2", features = ["postgres"] }
dotenvy = { version = "0" }
