[package]
name = "recat-app"
description = "recat application layer"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
# local dependencies
recat-core = { path = "../recat-core" }

# workspace dependencies
reddd = { workspace = true }
