[package]
name = "recat-app"
description = "recat application layer"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
# local dependencies
recat-core = { path = "../recat-core" }
recat-adapter-persist = { path = "../recat-adapter-persist" }

# workspace dependencies
async-trait = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
reddd = { workspace = true }
uuid = { workspace = true }
