[package]
name = "recat-driver"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
# local dependencies
recat-core = { path = "../recat-core" }
recat-app = { path = "../recat-app" }
recat-adapter = { path = "../recat-adapter" }
recat-adapter-persist = { path = "../recat-adapter-persist" }
