[package]
name = "recat-driver"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
# external dependencies
clap = { version = "4", features = ["color", "derive", "env"] }

# local dependencies
recat-core = { path = "../recat-core" }
recat-app = { path = "../recat-app" }
recat-adapter = { path = "../recat-adapter" }
recat-adapter-persist = { path = "../recat-adapter-persist" }

# workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reddd = { workspace = true }
